--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -1,37 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <!-- 디자인 요소 도입 (색 변경 등) -->
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="41dp"
-        android:text="1. 아이디를 입력해주세요." />
-
-    <EditText
-        android:layout_width="200dp"
-        android:layout_height="30dp"
-        android:backgroundTint="@color/cardview_dark_background"
-        android:id="@+id/id"
-        />
+        android:text="1. 아이디를 입력해주세요."
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.378"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="93dp" />
 
     <TextView
+        android:id="@+id/pw"
         android:layout_width="wrap_content"
         android:layout_height="41dp"
         android:text="2. 비밀번호를 입력해 주세요."
-        android:id="@+id/pw"/>
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.403"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="195dp" />
+
+    <EditText
+        android:id="@+id/id"
+        android:layout_width="200dp"
+        android:layout_height="30dp"
+        android:backgroundTint="#8BE2DC"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.464"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="134dp" />
 
     <EditText
         android:layout_width="200dp"
         android:layout_height="30dp"
         android:backgroundTint="@color/cardview_dark_background"
-         />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.464"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="236dp" />
 
     <Button
         android:id="@+id/checkidpw"
         android:layout_width="170dp"
         android:layout_height="50dp"
-        android:text="완료" />
+        android:backgroundTint="#63C7C2"
+        android:text="완료"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="556dp" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
