--- a/app/src/main/res/layout/firstpage.xml
+++ b/app/src/main/res/layout/firstpage.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".First"
+    tools:context=".FirstPage(ToLoginAndRegister)"
     android:orientation="vertical">
 
     <ImageView
@@ -20,6 +20,7 @@
         android:layout_width="167dp"
         android:layout_height="wrap_content"
         android:text="로그인"
+        android:textStyle="bold"
         android:layout_marginTop="70dp"
         android:layout_marginLeft="120dp"/>
 
@@ -29,5 +30,6 @@
         android:layout_width="170dp"
         android:layout_marginLeft="120dp"
         android:layout_height="wrap_content"
-        android:text="회원가입 " />
+        android:text="회원가입 "
+        android:textStyle="bold"/>
 </LinearLayout>
