--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -51,7 +51,7 @@
         tools:layout_editor_absoluteY="236dp" />
 
     <Button
-        android:id="@+id/checkidpw"
+        android:id="@+id/Register"
         android:layout_width="170dp"
         android:layout_height="50dp"
         android:backgroundTint="#63C7C2"
