--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -33,7 +33,7 @@
     <!--android:contentDescription="@string/id_description"-->
 
     <TextView
-        android:id="@+id/pw"
+        android:id="@+id/enter_pw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/enter_password"
@@ -41,7 +41,7 @@
         android:layout_marginBottom="16dp" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/pw"
         android:layout_width="200dp"
         android:layout_height="48dp"
         android:backgroundTint="@color/cardview_dark_background"
