--- a/app/src/main/res/layout/fragment_my_page_fragment.xml
+++ b/app/src/main/res/layout/fragment_my_page_fragment.xml
@@ -111,7 +111,7 @@
         app:layout_constraintVertical_bias="0.404" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnSetLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
@@ -119,11 +119,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        app:layout_constraintTop_toBottomOf="@+id/tvUserLocation"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/tvUserLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
