--- a/app/src/main/res/layout/fragment_my_page_fragment.xml
+++ b/app/src/main/res/layout/fragment_my_page_fragment.xml
@@ -114,7 +114,7 @@
         android:id="@+id/btnSetLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="위치설정"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -126,7 +126,7 @@
         android:id="@+id/tvUserLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="현재위치: 설정되지 않음"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
