--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,12 +7,14 @@
     android:padding="16dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center_horizontal">
-
-        <!-- 디자인 요소 도입 (색 변경 등) -->
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
             android:id="@+id/id_label"
@@ -27,7 +29,6 @@
             android:id="@+id/newid"
             android:layout_width="200dp"
             android:layout_height="48dp"
-            android:backgroundTint="#8BE2DC"
             android:inputType="text"
             android:layout_marginTop="16dp" />
 
@@ -43,7 +44,6 @@
             android:id="@+id/newpw"
             android:layout_width="200dp"
             android:layout_height="48dp"
-            android:backgroundTint="@color/cardview_dark_background"
             android:inputType="textPassword"
             android:layout_marginTop="16dp" />
 
@@ -51,9 +51,10 @@
             android:id="@+id/Register"
             android:layout_width="170dp"
             android:layout_height="50dp"
+            android:layout_marginTop="32dp"
             android:backgroundTint="#63C7C2"
-            android:text="@string/register"
-            android:layout_marginTop="32dp" />
+            android:text="@string/register" />
 
     </LinearLayout>
-</ScrollView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
