--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="60dp"
         android:ems="10"
         android:hint="닉네임을 입력하세요"
-        android:inputType="text"
+        android:inputType="textCapSentences|textMultiLine"
         app:layout_constraintBottom_toTopOf="@+id/editMajor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.827"
@@ -27,7 +27,7 @@
         android:layout_height="48dp"
         android:ems="10"
         android:hint="전공을 입력하세요"
-        android:inputType="text"
+        android:inputType="textCapSentences|textMultiLine"
         app:layout_constraintBottom_toTopOf="@+id/MenteeCheckBox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.827"
@@ -59,6 +59,7 @@
         android:hint="소개 내용을 작성해주세요."
         android:padding="8dp"
         android:textSize="12sp"
+        android:inputType="textCapSentences|textMultiLine"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
