--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -1,126 +1,112 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProfileEditActivity">
 
-    <EditText
-        android:id="@+id/editName"
-        android:layout_width="185dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="60dp"
-        android:ems="10"
-        android:hint="닉네임을 입력하세요"
-        android:inputType="textCapSentences|textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/editMajor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.827"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/editMajor"
-        android:layout_width="185dp"
-        android:layout_height="48dp"
-        android:ems="10"
-        android:hint="전공을 입력하세요"
-        android:inputType="textCapSentences|textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/MenteeCheckBox"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.827"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editName" />
-
-    <TextView
-        android:id="@+id/ProfileintroView"
-        android:layout_width="wrap_content"
+    <!-- 전체 컨테이너 -->
+    <LinearLayout
+        android:id="@+id/profileContainer"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="멘토/멘티 소개서"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/Profileintro"
+        android:layout_marginTop="52dp"
+        android:background="@android:color/white"
+        android:orientation="vertical"
+        android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.131"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/Profileintro"
-        android:layout_width="333dp"
-        android:layout_height="305dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginBottom="160dp"
-        android:background="#E0E0E0"
-        android:gravity="start|top"
-        android:hint="소개 내용을 작성해주세요."
-        android:padding="8dp"
-        android:textSize="12sp"
-        android:inputType="textCapSentences|textMultiLine"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ProfileintroView" />
+        <!-- 프로필 이미지 및 입력 필드 수평 정렬 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/ProfileEditDoneButton"
-        android:layout_width="312dp"
-        android:layout_height="59dp"
-        android:layout_marginTop="32dp"
-        android:backgroundTint="#616161"
-        android:text="수정완료"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/Profileintro" />
+            <!-- 프로필 이미지 -->
+            <ImageButton
+                android:id="@+id/imageButton"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:contentDescription="Profile Image"
+                android:src="@drawable/ic_launcher_background" />
 
-    <CheckBox
-        android:id="@+id/MenteeCheckBox"
-        android:layout_width="65dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginBottom="64dp"
-        android:text="멘티"
-        app:layout_constraintBottom_toTopOf="@id/Profileintro"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/MentorCheckBox"
-        app:layout_constraintTop_toBottomOf="@+id/editMajor" />
+            <!-- 닉네임 및 전공 입력 필드 -->
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:paddingStart="16dp">
 
-    <CheckBox
-        android:id="@+id/MentorCheckBox"
-        android:layout_width="65dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="63dp"
-        android:text="멘토"
-        app:layout_constraintBottom_toTopOf="@+id/Profileintro"
-        app:layout_constraintEnd_toStartOf="@+id/MenteeCheckBox"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/imageButton"
-        app:layout_constraintTop_toBottomOf="@+id/editMajor"
-        app:layout_constraintVertical_bias="0.0"
-        tools:ignore="MissingConstraints" />
+                <EditText
+                    android:id="@+id/editName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="닉네임을 입력하세요" />
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="132dp"
-        android:layout_height="135dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="40dp"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/ic_launcher_background"
-        app:layout_constraintBottom_toTopOf="@+id/ProfileintroView"
-        app:layout_constraintEnd_toStartOf="@+id/editName"
-        app:layout_constraintHorizontal_bias="0.15"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+                <EditText
+                    android:id="@+id/editMajor"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:hint="전공을 입력하세요" />
+            </LinearLayout>
+        </LinearLayout>
 
+        <!-- 멘토/멘티 체크박스 그룹 -->
+
+        <!-- 멘토/멘티 소개서 -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:gravity="end"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/MentorCheckBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="멘토" />
+
+            <CheckBox
+                android:id="@+id/MenteeCheckBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="멘티" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="멘토/멘티 소개서"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/Profileintro"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:layout_marginTop="8dp"
+            android:background="@android:drawable/editbox_background"
+            android:gravity="top|start"
+            android:hint="소개 내용을 작성해주세요."
+            android:scrollbars="vertical"
+            android:scrollHorizontally="false" />
+
+        <!-- 수정 완료 버튼 -->
+        <Button
+            android:id="@+id/ProfileEditDoneButton"
+            android:layout_width="match_parent"
+            android:layout_height="58dp"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="#616161"
+            android:text="수정 완료" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
