--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -53,7 +53,8 @@
             android:layout_height="50dp"
             android:layout_marginTop="32dp"
             android:backgroundTint="#63C7C2"
-            android:text="@string/register" />
+            android:text="@string/register"
+            android:textColor="@color/white"/>
 
     </LinearLayout>
 
