--- a/app/src/main/res/layout/item_profile.xml
+++ b/app/src/main/res/layout/item_profile.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:layout_margin="10dp"
+    android:background="@drawable/border_gray">
 
     <TextView
         android:id="@+id/tvName"
@@ -13,6 +15,7 @@
         android:text="사용자 이름"
         android:textStyle="bold"
         android:layout_marginBottom="4dp"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Role"
+        android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvName" />
 
@@ -30,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Major"
+        android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@id/tvRole"
         app:layout_constraintTop_toTopOf="@id/tvRole"
         android:layout_marginStart="8dp" />
