--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -7,4 +7,4 @@
     android:layout_margin="6dp"
 
     android:background="@drawable/bg_chat_received"
-    android:textColor="@android:color/white"/>
+    android:textColor="@android:color/black"/>
