--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,9 @@
         android:layout_height="0dp"
         android:id="@+id/main_container"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view"
-
         app:layout_constraintEnd_toEndOf="@+id/bottom_navigation_view"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <!-- 프레그먼트컨테이너  -->
@@ -31,14 +30,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bottom_navigation_view"
+        android:background="@drawable/box"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:menu="@menu/bottom_navigation_menu"
         app:labelVisibilityMode="labeled"
         app:itemIconSize="30dp"
-        app:itemTextColor="@color/black"
-        app:itemIconTint="@color/black"
         />
 
 
