--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
+    <ImageButton
+        android:id="@+id/backbtreg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/baclbt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"/>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,6 +29,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
+
         <TextView
             android:id="@+id/id_label"
             android:layout_width="wrap_content"
@@ -23,13 +37,14 @@
             android:text="@string/enter_id"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textStyle="bold"
-            android:layout_marginTop="32dp" />
+            android:layout_marginTop="0dp" />
 
         <EditText
             android:id="@+id/newid"
             android:layout_width="200dp"
             android:layout_height="48dp"
             android:inputType="text"
+            android:background="@drawable/rectangle5"
             android:layout_marginTop="16dp" />
 
         <TextView
@@ -45,15 +60,15 @@
             android:layout_width="200dp"
             android:layout_height="48dp"
             android:inputType="textPassword"
+            android:background="@drawable/rectangle5"
             android:layout_marginTop="16dp" />
 
-        <Button
+        <ImageButton
             android:id="@+id/Register"
             android:layout_width="170dp"
             android:layout_height="50dp"
             android:layout_marginTop="32dp"
-            android:backgroundTint="#63C7C2"
-            android:text="@string/register"
+            android:background="@drawable/signupbt"
             />
 
     </LinearLayout>
