--- a/app/src/main/res/layout/activity_user_delete.xml
+++ b/app/src/main/res/layout/activity_user_delete.xml
@@ -7,6 +7,16 @@
     android:layout_height="match_parent"
     tools:context=".UserDeleteActivity">
 
+    <ImageButton
+        android:id="@+id/backbtmypg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/baclbt"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/UserDeleteButton"
         android:layout_width="138dp"
