--- a/app/src/main/res/layout/firstpage.xml
+++ b/app/src/main/res/layout/firstpage.xml
@@ -5,31 +5,32 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     tools:context=".FirstPageToLoginAndRegister"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="230dp"
-        app:srcCompat="@drawable/ic_launcher_foreground" />
+        android:background="@drawable/rogo" />
 
-    <Button
+
+    <ImageButton
         android:id="@+id/login"
-        android:layout_width="167dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="로그인"
-        android:textStyle="bold"
         android:layout_marginTop="70dp"
-        android:layout_marginLeft="120dp"/>
+        android:layout_gravity="center"
+        android:background="@drawable/roginbt"
+         />
 
-    <Button
+
+    <ImageButton
         android:id="@+id/join"
-        android:layout_marginTop="7dp"
-        android:layout_width="170dp"
-        android:layout_marginLeft="120dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="회원가입 "
-        android:textStyle="bold"/>
+        android:layout_marginTop="7dp"
+        android:layout_gravity="center"
+        android:background="@drawable/signupbt" />
 </LinearLayout>
