--- a/app/src/main/res/layout/fragment_my_page_fragment.xml
+++ b/app/src/main/res/layout/fragment_my_page_fragment.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.162"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_launcher_background"/>
+        android:src="@drawable/profileframe"/>
 
     <TextView
         android:id="@+id/textView"
