--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,16 +6,17 @@
     <item
         android:id="@+id/findmentomenti"
         android:title="멘토멘티 찾기"
-        android:icon="@drawable/ic_launcher_background"
+        android:icon="@drawable/gray1"
         />
     <item
         android:id="@+id/myhistory"
         android:title="매칭이력"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@drawable/gray2"
         />
     <item
         android:id="@+id/mypage"
         android:title="마이페이지"
-        android:icon="@color/black"
+        android:icon="@drawable/gray3"
         />
+
 </menu>
