--- a/app/src/main/res/layout/activity_user_delete.xml
+++ b/app/src/main/res/layout/activity_user_delete.xml
@@ -22,6 +22,7 @@
         android:layout_width="138dp"
         android:layout_height="79dp"
         android:text="회원 탈퇴"
+        android:backgroundTint="#2ADEA3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
